--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@
 }
 
 
+:root{
+    --title-font: "Dela Gothic One", sans-serif;
+    --text-font: "Comme", sans-serif;
+
+    --up-color:  #d89f0cdc;
+    --title-color:  #ffffff;
+}
+
 
 
 /* 1. Header Section */
@@ -23,12 +31,14 @@ header{
 .bar{
     margin: 1rem;
     padding: 1rem;
-    color: rgb(237, 221, 221);
+    color: rgb(238, 231, 231);
     display: flex;
     justify-content: center;
     gap: 20px;
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
+    right: 0;
     height: 5vh;
     
     font-size: 1.5rem;
@@ -46,10 +56,11 @@ header{
 }
 
 .intro__up{
-    padding: 1rem;
-    margin: 1rem;
+    padding: 1rem 1rem 0 1rem;
+    margin: 1rem 1rem 0 1rem;
 
-    color: #d89f0cdc;
+    font-family: var(--text-font);
+    color: var(--up-color);
     text-align: left;
     padding-left: 40px;
     position: relative;
@@ -60,10 +71,10 @@ header{
 
     width: 35px;
     height: 2px;
-    background:  #d89f0cdc;
+    background:  var(--up-color);
     position: absolute;
     left: 0;
-    top: 50%;
+    top: 70%;
     z-index: 1;
 
     border-radius: 100px;
@@ -71,14 +82,93 @@ header{
 
 
 .intro__middle{
+    font-family: var(--title-font);
     margin-left: 1rem;
     font-size: 3.5rem;
-    color: #ffffff;
+    color: var(--title-color);
 }
 .intro__bottom{
+    font-family: var(--text-font);
+
     color: rgb(221, 219, 219);
     margin: 1rem 2rem 2rem 1rem;
 }
 .intro__bottom span{
     color: rgb(255, 255, 255);
+}
+
+/* 2. Hero section */
+
+.hero{
+    background-color: #4C8C9C;
+    display: flex;
+    flex-direction: column;
+}
+
+.hero__card{
+    padding: 100px;
+    margin: 100px;
+    display: flex;
+    justify-content: space-around;
+    flex: 1 1 auto;
+    gap: 1rem;
+}
+
+
+
+.hero__left__card{
+    margin: 1rem;
+    padding: 1rem;
+}
+.hero__right__card{
+    margin: 1rem;
+    padding: 2rem;
+    
+}
+.right__image{
+    width: 500px;
+}
+
+
+@media (max-width: 1200px){
+
+
+.hero__card{
+    padding: 100px 0 100px 0;
+    margin: 100px 0 100px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 1 1 auto;
+    gap: 1rem;
+}
+.right__image{
+    width:100%;
+    
+}
+.hero__right__card{
+    margin: 1rem;
+    padding: 2rem;
+    
+}
+
+.intro__up{
+    font-size: 0.8rem;
+}
+.intro__middle{
+    font-size: 2.5rem;
+}
+.intro__bottom{
+    font-size: 0.8rem;
+}
+}
+
+
+.hero__left__card .intro__middle{
+    font-size: 2rem;
+}
+.intro__text{
+    margin: 1rem;
+    color: var(--title-color);
+    font-family: var(--text-font);
 }
